# mcp-router

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: real_mcp_tools.json
deploy/: gateway.config.json  gateway.mcp.config.json  init.sql
docs/: real-embed-report.md  real-embed-results.csv  real-tool-similarity.md  sample-report.md  sample-results.csv
scripts/: pairwise_similarity.py
src/mcp_router/: __init__.py  cli.py  config.py  determinism.py  models.py  tracing.py
src/mcp_router/bench/: __init__.py  agent.py  agent_langgraph.py  metrics.py  report.py  runner.py
src/mcp_router/catalog/: __init__.py  synth.py
src/mcp_router/gateway/: __init__.py  breaker.py  factory.py  federation.py  mcp_server.py  mcp_upstream.py  rbac.py  server.py  transport.py  upstream.py
src/mcp_router/labeling/: __init__.py  kappa.py  labeler.py
src/mcp_router/providers/: __init__.py  base.py  claude.py  local_embed.py  mock.py
src/mcp_router/routing/: __init__.py  base.py  strategies.py
src/mcp_router/vectorstore/: __init__.py  base.py  memory.py  pgvector.py
tests/: test_cliff.py  test_fixes.py  test_gateway.py  test_gateway_reconnect.py  test_mcp_integration.py  test_units.py
tests/fixtures/: gateway_stdio_server.py  mini_mcp_server.py
