[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-router"
version = "0.1.0"
description = "MCP tool-routing recall benchmark"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Real, opt-in adapters. The offline default path needs none of these.
claude = ["anthropic"]                       # real Claude tool-use llm/agent
local = ["sentence-transformers"]            # real bge-small embeddings
mcp = ["mcp"]                                # real stdio/HTTP MCP upstreams + SDK server transport

[project.scripts]
mcp-router = "mcp_router.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
